# AIbotix

./: README.md
.docker/: Dockerfile  run_user_nvidia.sh
OrbbecSDK_ROS2/orbbec_camera/config/: camera_params.yaml
OrbbecSDK_ROS2/orbbec_camera/launch/: femto_bolt.launch.py
OrbbecSDK_ROS2/orbbec_description/launch/: view_model.launch.py
OrbbecSDK_ROS2/orbbec_description/urdf/: femto_bold.urdf  femto_bold1.urdf
Universal_Robots_ROS2_Description/urdf/: ur_macro.xacro
Universal_Robots_ROS2_Driver/ur_moveit_config/config/: joint_limits.yaml
Universal_Robots_ROS2_Driver/ur_moveit_config/srdf/: ur_macro.srdf.xacro
Universal_Robots_ROS2_Driver/ur_robot_driver/config/: ur_controllers.yaml
aruco_camera/: package.xml  setup.cfg  setup.py
aruco_camera/aruco_camera/: calibration_data.npz  camera_static.py  multi_aruco_detection.py  ur_controller.py
aruco_camera/aruco_camera/__pycache__/: calibration_data.npz
design/: design.json
end_effector/: CMakeLists.txt  package.xml
end_effector/rviz/: end_effector_config.rviz
pick_n_place_bring_up/: CMakeLists.txt  package.xml
pick_n_place_bring_up/launch/: multi_aruco_detection.launch.xml  pick_n_place.launch.xml
pick_n_place_interfaces/: CMakeLists.txt  package.xml
pick_n_place_interfaces/msg/: ArucoMarkers.msg  ArucoMarkersArray.msg
pick_n_place_interfaces/srv/: RemoveAruco.srv  Reset.srv  TransformService.srv
pymoveit2/pymoveit2/robots/: ur.py
ros2_aruco_transform/: CMakeLists.txt  package.xml
ros2_aruco_transform/srv/: TransformService.srv
ur_commander/: CMakeLists.txt  package.xml
ur_commander/config/: rivz2_config.rviz
ur_commander/launch/: iaac_ur10e.launch.py  pick_n_place.launch.py
ur_commander/scripts/: pick_n_place_wrapup.ipynb
