<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pick_n_place_bring_up</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="shu.xiao@students.iaac.net">shu</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>aruco_camera</depend>
  <depend>orbbec_camera</depend>
  <depend>ur_commander</depend>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
